<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Editar.Editar">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/str_nombre"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView4"
        android:src="@drawable/pordefecto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:hint="@string/str_Ingredientes"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_aceptar"
        android:id="@+id/button6"
        android:layout_below="@+id/imageView4"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7"
        android:onClick="aceptar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cancelar"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button6"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:onClick="volver" />
</RelativeLayout>
