<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Interfaz.AddReceta"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView2"
                android:background="@drawable/camara" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_nombre"
                android:id="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_margin="1dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_instrucciones"
                android:id="@+id/textView3"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_margin="1dp"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="229dp"
            android:layout_height="159dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView11" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_Ingredientes"
            android:id="@+id/button3"
            android:background="@color/colorPrimary"
            android:onClick="addIngredientes"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/listView"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView"
        android:background="@drawable/boton_redondo"
        android:text="@string/str_add"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:onClick="addReceta"
        android:layout_gravity="right"
        android:layout_weight="0" />

</LinearLayout>
