<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.VerReceta"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/imageView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_nombre"
        android:id="@+id/textView4"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:textSize="35dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="15dp"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_Ingredientes"
        android:id="@+id/textView7"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_Ingredientes"
        android:id="@+id/textView8"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_instrucciones"
        android:id="@+id/textView5"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_instrucciones"
        android:id="@+id/textView6"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp" />
</LinearLayout>
